--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: 6lab
-      run: ./main
+      run: ./main.c
     - name: make
       run: make
     - name: make check
